Se hace prueba de cambios al archivo HTML crear_empleado

--- a/websites/crear_empleado.html
+++ b/websites/crear_empleado.html
@@ -15,7 +15,7 @@
 </head>
 <body>
     <div class="container">
-        <h1>CREAR EMPLEADO</h1>
+        <h1>CREACIÓN DE EMPLEADOS</h1>
         <form id="formulario" method="post" action="http://localhost:8080/prueba_oas/crear_empleado.php">
             <div class="row datos_cabecera">
                 <div class="col-xs-12 col-md-6">
